Changes between 2.3.5 and 2.4.DEV
-----------------------------------

- fix issue322: tearDownClass is not run if setUpClass failed. Thanks
  Mathieu Agopian for the initial fix.  Also make all of pytest/nose finalizer 
  mimick the same generic behaviour: if a setupX exists and fails, 
  don't run teardownX.  This also introduces a new method "node.addfinalizer()"
  helper which can only be called during the setup phase of a node.

- fix issue336: autouse fixture in plugins should work again.

- change to use hyphen-separated long options but keep the old spelling
  backward compatible.  py.test -h will only show the hyphenated version,
  for example "--collect-only" but "--collectonly" will remain valid as well
  (for backward-compat reasons).  Many thanks to Anthon van der Neut for
  the implementation and to Hynek Schlawack for pushing us.

- fix issue279: improve object comparisons on assertion failure
  for standard datatypes and recognise collections.abc.  Thanks to
  Brianna Laugher and Mathieu Agopian.

- fix issue317: assertion rewriter support for the is_package method

- fix issue335: document py.code.ExceptionInfo() object returned
  from pytest.raises(), thanks Mathieu Agopian.

- remove implicit distribute_setup support from setup.py.

- fix issue305: ignore any problems when writing pyc files.

- integrate tab-completion on options through use of "argcomplete".
  Thanks Anthon van der Neut for the PR.

- pytest now uses argparse instead of optparse (thanks Anthon) which 
  means that "argparse" is added as a dependency if installing into python2.6
  environments or below.

- SO-17664702: call fixture finalizers even if the fixture function
  partially failed (finalizers would not always be called before)

- color the last line red or green depending if failures/errors occured
  or everything passed.  thanks Christian Theunert.

- fix issue320 - fix class scope for fixtures when mixed with
  module-level functions.  Thanks Anatloy Bubenkoff.
