@@ -35,6 +35,38 @@ def test_setattr():
     monkeypatch.undo() # double-undo makes no modification
     assert A.x == 5
 
+class TestDerived:
+    def f(self):
+        pass
+
+    def test_class_function(self, monkeypatch):
+        monkeypatch.replace(TestDerived.f, lambda x: 42)
+        assert TestDerived().f() == 42
+
+    def test_instance_function(self, monkeypatch):
+        t = TestDerived()
+        monkeypatch.replace(t.f, lambda: 42)
+        assert t.f() == 42
+
+    def test_module_class(self, monkeypatch):
+        class New:
+            pass
+        monkeypatch.replace(TestDerived, New)
+        assert TestDerived == New
+
+    def test_nested_module(self, monkeypatch):
+        monkeypatch.replace(os.path.abspath, lambda x: "hello")
+        assert os.path.abspath("123") == "hello"
+
+    def test_string_expression(self, monkeypatch):
+        monkeypatch.replace("os.path.abspath", lambda x: "hello2")
+        assert os.path.abspath("123") == "hello2"
+
+    def test_string_expression_class(self, monkeypatch):
+        monkeypatch.replace("_pytest.config.Config", 42)
+        import _pytest
+        assert _pytest.config.Config == 42
+
 def test_delattr():
     class A:
         x = 1
